// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputBase Renders Correctly 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary css-1g2oy68-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yimnyd-MuiInputBase-input"
        name="test"
        type="text"
        value="Input"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`InputBase Renders Correctly disabled 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary css-1g2oy68-MuiInputBase-root"
    >
      <input
        class="MuiInputBase-input css-yimnyd-MuiInputBase-input"
        data-testid="input"
        name="test"
        type="text"
        value="a"
      />
    </div>
  </form>
</DocumentFragment>
`;
